# perseus

./: .editorconfig  .gitignore  .travis.yml  README.md  pyproject.toml  pytest.ini
perseus/: __init__.py  __main__.py  cli.py  pytest_plugin.py
perseus/_vendor/snapshottest/: formatters.py  module.py
tests/: conftest.py  test_snapshot.py
tests/pytest_samples/one_good_one_bad/: test_one_good_one_bad.py
tests/pytest_samples/one_good_one_bad/snapshots/: snap_test_one_good_one_bad.py
tests/snapshots/: snap_test_snapshot.py
