[tool.poetry]
name = "perseus"
version = "0.1.1"
description = "Snapshot management tool"
authors = ["Boger <kotvberloge@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/b0g3r/perseus"
homepage = "https://github.com/b0g3r/perseus"

[tool.poetry.dependencies]
python = "^3.6"
pytest = ">=4.0"
# snapshottest vendor dependencies
termcolor = "^1.1.0"
fastdiff = ">=0.1.4,<1"

[tool.poetry.dev-dependencies]
mypy = "^0.750"

[tool.poetry.plugins.pytest11]
perseus = "perseus.pytest_plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
